增加H2内存数据库测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-# Mysql 注意替换相应配置
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xunwu
-spring.datasource.username=root
-spring.datasource.password=root
+spring.profiles.active=dev
+
 
 spring.jpa.show-sql=true
 # 只做格式做验证不做增删改查
