页面异常拦截器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.profiles.active=dev
 
 # thymeleaf
 spring.thymeleaf.mode=HTML
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.prefix=classpath:/templates/
+#关闭springboot自带的错误页面
+server.error.whitelabel.enabled=false
 
 
 spring.jpa.show-sql=true
