添加是静态页面修改不用热启动的代码以及HomeController的一些跳转代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
 #关闭springboot自带的错误页面
 server.error.whitelabel.enabled=false
+#设置配出哪些不用热加载
+spring.devtools.restart.exclude=templates/**,static/**
 
 
 spring.jpa.show-sql=true
