--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Thymeleaf方言支持SpringSecurity 依赖-->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+			<version>${thymeleaf-extras-springsecurity4.version}</version>
+		</dependency>
+
 		<!-- jpa相关依赖 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
